fix(public): favicon
Added favicon and added it to the index page.

Also, small change in style.css: removed inversing colors.

--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,16 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Rather Cool APIs - Fully Dynamic</title>
+        <title>Rather Cool APIs - andrinoff</title>
         <link rel="stylesheet" href="style.css" />
+        <link rel="icon" href="favicon.ico" />
     </head>
     <body>
         <header>
-            <h1>Rather Cool APIs 🚀</h1>
+            <div class="logo_container">
+                <img src="favicon.ico" alt="Logo" class="logo" />
+                <h1>Rather Cool APIs 🚀</h1>
+            </div>
             <button id="theme-switcher" aria-label="Toggle theme">🌙</button>
         </header>
         <main>
