--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,17 @@
         <title>Rather Cool APIs - andrinoff</title>
         <link rel="stylesheet" href="style.css" />
         <link rel="icon" href="favicon.ico" />
+        <link
+            rel="stylesheet"
+            id="hljs-light-theme"
+            href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-light.min.css"
+            disabled
+        />
+        <link
+            rel="stylesheet"
+            id="hljs-dark-theme"
+            href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.min.css"
+        />
     </head>
     <body>
         <header>
@@ -35,6 +46,7 @@
                 >.
             </p>
         </footer>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
         <script src="script.js"></script>
     </body>
 </html>
